<resources>

    <!-- General -->
    <string name="app_name" translatable="false">MovieBase</string>
    <string name="movie_title">Movies</string>
    <string name="series_title">Series</string>
    <string name="no_network_connection">You are not connected to the internet. Please turn on to get the movies.</string>
    <string name="about">About</string>
    <string name="cancel">cancel</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navigation_tag" translatable="false">navigation_fragment</string>
    <string name="movie_tag" translatable="false">movie_fragment</string>
    <string name="series_tag" translatable="false">series_fragment</string>
    <string name="search_tag" translatable="false">search_fragment</string>
    <string name="action_movies">Movies</string>
    <string name="action_series">Series</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <!-- Overview -->
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_favorite">Own Favorites</string>
    <string name="no_favorite_movies">You have not marked any movie as your favorite yet.</string>
    <string name="no_favorite_series">You have not marked any serie as your favorite yet.</string>
    <string name="counter_slash" translatable="false">&#160;/&#160;</string>

    <!-- Detail -->
    <string name="marked_as_favorite">%s was marked as favorite</string>
    <string name="unmarked_as_favorite">%s was unmarked as favorite</string>
    <string name="adult">Adult</string>
    <string name="actors_label">Actors</string>
    <string name="similar_movies">Similar %1$s</string>
    <string name="info_max_rating" translatable="false">&#160;/&#160;10</string>
    <string name="info_release_label" translatable="false">Release</string>
    <string name="info_runtime_label">Runtime</string>
    <string name="info_first_air_date_label">First date on tv</string>
    <string name="info_last_air_date_label">Last date on tv</string>
    <string name="additional_info_budget_label">Budget</string>
    <string name="additional_info_number_of_episodes_label">Episodes</string>
    <string name="additional_info_number_of_seasons_label">Seasons</string>
    <string name="additional_info_revenue_label">Revenue</string>
    <string name="additional_info_homepage_label" translatable="false">Homepage</string>
    <string name="additional_info_link" translatable="false">Link</string>
    <string name="additional_info_original_title_label">Original Title</string>
    <string name="summary_label">Summary</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailers_label" translatable="false">Trailers</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="review_show_more">Show next review (%d remaining)</string>
    <string name="trailers_show_more">Show next trailers (%d remaining)</string>
    <string name="unknown">unknown</string>
    <string name="season_number">Season: %1$s</string>
    <string name="episodes_count">Episodes: %1$s</string>
    <string name="seasons_air_date">Date: %1$s</string>
    <string name="seasons">Seasons</string>
    <string name="no_picture_available">No picture available</string>
    <string name="unknown_error">Details could not be loaded :-( </string>
    <string name="network_error">Please check your network connections </string>
    <string name="toolbar_background_content_descrption">Background Image</string>
    <string name="cover_image_content_descrption">Cover Image</string>
    <string name="actor_image_content_description">Actor Image</string>
    <string name="season_image_content_description">Season Cover Image</string>
    <string name="trailer_image_content_description">Trailer Cover Image</string>
    <string name="trailer_thumbs_up_content_description">Trailer Like Image</string>
    <string name="trailer_thumbs_down_content_description">Trailer Dislike Image</string>
    <string name="trailer_watched_content_description">Trailer Watch-Count Image</string>

    <!-- About -->
    <string name="about_text_second">For further information, questions or feedback, please use the button at the bottom to send me an email.</string>
    <string name="about_creator" translatable="false">- Tobias</string>
    <string name="about_email" translatable="false">tobi.applications@gmail.com</string>
    <string name="about_email_text">Hello Tobias, \n\n</string>
    <string name="about_credits" translatable="false">Credits:</string>
    <string name="about_udacity" translatable="false">- Udacity</string>
    <string name="about_themoviedp" translatable="false">- TheMovieDB</string>
    <string name="about_yesofcorsa" translatable="false">- Yesofcorsa</string>
    <string name="about_iconfinder" translatable="false">- Iconfinder</string>
    <string name="about_email_chooser_title">Choose your email client</string>
    <string name="about_no_email_clients">There are no email clients installed</string>
    <string name="about_send_email_loading">One second ...</string>
    <string name="about_privacy_policy">Privacy Policy</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_headline">Do you want to search for movies or series?</string>
    <string name="search_error_not_enough_characters">Please enter at least 1 character</string>
    <string name="search_hint">Search query ...</string>

    <!-- Settings -->
    <string name="pref_key_delete_movies" translatable="false">delete_all_favorite_movies</string>
    <string name="pref_key_delete_series" translatable="false">delete_all_favorite_series</string>
    <string name="pref_title_delete_movies">Delete all favorites movies?</string>
    <string name="pref_title_delete_series">Delete all favorites series?</string>
    <string name="pref_summary_delete">You have to confirm this action</string>
    <string name="pref_summary_no_favorites">You currently do not have any favorites</string>
    <string name="pref_delete_dialog_title">Are you sure?</string>
    <string name="pref_delete_dialog_text">If you hit ok, all your favorite %1$s will be removed. This does have no affect to your favorite %2$s.</string>
    <string name="pref_delete_dialog_movies_entry">movies</string>
    <string name="pref_delete_dialog_series_entry">series</string>
    <string name="pref_all_favorites_deleted_sucessfully">All your favorite %1$s are deleted successfully</string>
    <string name="pref_language_label">Language</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_default" translatable="false">en</string>
    <string name="pref_language_en_value" translatable="false">en</string>
    <string name="pref_language_de_value" translatable="false">de</string>
    <string name="pref_language_en_label">English</string>
    <string name="pref_language_de_label">German</string>

    <!-- Crashlytics -->
    <string name="type_identifier" translatable="false">Type</string>
    <string name="movie_identifier" translatable="false">Movie</string>
    <string name="serie_identifier" translatable="false">Serie</string>
    <string name="unknown_identifier" translatable="false">Unknown</string>
    <string name="content_view_identifier" translatable="false">View</string>
    <string name="about_fragment_identifier" translatable="false">About Fragment</string>
    <string name="settings_fragment_identifier" translatable="false">Settings Fragment</string>
    <string name="movies_fragment_identifier" translatable="false">Movie Overview</string>
    <string name="series_fragment_identifier" translatable="false">Serie Overview</string>
    <string name="detail_fragment_identifier" translatable="false">Detail Fragment</string>
    <string name="search_query_fragment_identifier" translatable="false">Search Query Fragment</string>
    <string name="search_results_fragment_identifier" translatable="false">Search Results Fragment</string>
    <string name="favorite_identifier" translatable="false">Fav Event</string>
    <string name="mark_favorite_identifier" translatable="false">Marked favorite</string>
    <string name="unmark_favorite_identifier" translatable="false">Unmarked favorite</string>


</resources>
