<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_movies"
            android:icon="@drawable/ic_movie"
            android:title="@string/action_movies" />
        <item
            android:id="@+id/menu_series"
            android:icon="@drawable/ic_serie"
            android:title="@string/action_series" />

        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search"
            android:title="@string/action_search" />

    </group>
    <group
        android:id="@+id/menu_group_additional"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_info"
            android:title="@string/action_about" />

    </group>

</menu>
