<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.NavigationActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/action_search">
    </item>
    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:title="@string/action_settings">
    </item>
    <item
        android:id="@+id/action_about"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/about" >
    </item>
</menu>