<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="tobiapplications.com.moviebase.ui.NavigationActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="tobiapplications.com.moviebase.ui.NavigationActivity"
            tools:showIn="@layout/fragment_about"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_credits" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/about_udacity" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/about_themoviedp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/about_yesofcorsa" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/about_iconfinder" />

            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/about_text_second" />


            <TextView
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_creator"
                android:textSize="16sp" />


            <Button
                android:id="@+id/privacyPolicy"
                android:text="@string/about_privacy_policy"
                android:background="@color/colorPrimary"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

