<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/search_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:background="@color/colorPrimary"
                android:layout_width="1dp"
                android:layout_height="45dp" />

            <RadioButton
                android:id="@+id/radio_movies"
                android:text="@string/movie_title"
                android:layout_marginStart="8dp"
                android:checked="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/colorPrimary"
                android:layout_width="1dp"
                android:layout_height="45dp" />

            <RadioButton
                android:id="@+id/radio_series"
                android:text="@string/series_title"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/colorPrimary"
                android:layout_width="1dp"
                android:layout_height="45dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

    </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/search_edittext"
                android:maxLines="1"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>


    <tobiapplications.com.moviebase.ui.views.PrimaryButton
        android:layout_marginTop="32dp"
        android:id="@+id/button_search"
        android:text="@string/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>

</layout>
