<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:text="@string/additional_info_original_title_label"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:id="@+id/textView7" />

            <TextView
                android:id="@+id/additional_info_origin_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Pirates of the Caribbean: Dead Men Tell No Tales"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                android:layout_marginLeft="0dp" />

            <TextView
                android:text="@string/additional_info_budget_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:id="@+id/textView4"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/additional_info_origin_title"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/additional_info_origin_title" />

            <TextView
                android:id="@+id/additional_info_budget"
                tools:text="23000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintLeft_toRightOf="@+id/textView4"
                android:layout_marginLeft="128dp"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                android:layout_marginTop="0dp" />

            <TextView
                android:text="@string/additional_info_revenue_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintLeft_toLeftOf="@+id/textView4"
                android:id="@+id/textView5" />


            <TextView
                android:id="@+id/additional_info_revenue"
                tools:text="4000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintLeft_toLeftOf="@+id/additional_info_budget" />

            <TextView
                android:text="@string/additional_info_homepage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintLeft_toLeftOf="@+id/textView5"
                android:id="@+id/homepage_label" />

            <TextView
                android:id="@+id/additional_info_link"
                android:text="@string/additional_info_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/additional_info_revenue"
                app:layout_constraintTop_toTopOf="@+id/homepage_label"
                android:textColor="@color/colorPrimaryDark" />


            <com.google.android.flexbox.FlexboxLayout
                xmlns:f="http://schemas.android.com/apk/res/tobiapplications.com.moviebase"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:id="@+id/additional_info_genres"
                android:orientation="horizontal"
                f:layout_newLine="true"
                android:layout_gravity="center"
                app:flexWrap="wrap"
                app:showDivider="middle"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/homepage_label"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>