<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="1.0">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:text="@string/additional_info_original_title_label"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" />

                <TextView
                    android:id="@+id/original_title"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="Pirates of the Caribbean: Dead Men Tell No Tales"
                    android:layout_marginStart="16dp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:text="@string/additional_info_number_of_episodes_label"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:id="@+id/textView4"/>

                <TextView
                    android:id="@+id/episodes"
                    tools:text="23000000"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:text="@string/additional_info_number_of_seasons_label"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:id="@+id/textView5" />


                <TextView
                    android:id="@+id/seasons"
                    tools:text="4000000"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_marginStart="16dp"
                    android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/homepage_layout"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/additional_info_homepage_label"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:id="@+id/homepage_label" />

                    <TextView
                        android:id="@+id/link"
                        android:text="@string/additional_info_link"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_marginStart="16dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.flexbox.FlexboxLayout
                        xmlns:f="http://schemas.android.com/apk/res/tobiapplications.com.moviebase"
                        android:layout_width="395dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/genres"
                        android:orientation="horizontal"
                        f:layout_newLine="true"
                        android:layout_gravity="center"
                        app:flexWrap="wrap"
                        app:showDivider="middle"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


