<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".ui.NavigationActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android" />

        <ProgressBar
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:id="@+id/progressBarLoading"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/loading_textview"
            android:visibility="gone"
            android:text="@string/string_fasten_your_seatbelts"
            android:layout_below="@id/progressBarLoading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/noFavoriteAvailable"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="22sp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:text="@string/no_favorite_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/noInternetConnectionTextView"
            android:visibility="gone"
            android:padding="16dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:text="@string/no_network_connection"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:id="@+id/counter_layout"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/counter"
                tools:text="4"
                android:paddingStart="4dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:text="@string/counter_slash"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/counter_total"
                tools:text="120"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:gravity="center_vertical"
                android:paddingEnd="4dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <ImageView
                android:background="@drawable/triangle_right"
                android:layout_width="10dp"
                android:layout_height="20dp" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/scrollUpButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrow_upward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_behavior="tobiapplications.com.moviebase.ui.views.FabScrollBehavior"/>

    </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>

